[tool.poetry]
name = "querator-service"
version = "0.1.0"
description = ""
authors = ["Tomy Hsieh <tomy0000000@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
transformers = "4.5.1"
torch = ">=1.7.0,<=1.8.1"
loguru = "^0.5.3"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
aiofiles = "^0.7.0"
nlg-eval = {git = "https://github.com/Maluuba/nlg-eval.git"}
python-docx = "^0.8.11"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
